SVN
---


Version 1.1.1, Apr 22, 2007
-------------------------------

XML:   Resolved issue CASTOR-1945 using contribution from Doug Daniels [Daniels.Douglas@gmail.com]
       Fixed problem with 'time' type handling in XML instance to schema generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1945
       (Werner - 20070418)

XML:   Resolved issue CASTOR-1937 using contribution from Paul Croarkin [paul_croarkin@yahoo.com]
       Relaxed various checks in the default ID resolver implementation so that those
       are executed only when the Unmarshaller is configured to be 'validating'.
       Details: http://jira.codehaus.org/browse/CASTOR-1937
       (Werner - 20070416)

XML:   Resolved issue CASTOR-1943 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added Unmarshaller.setObject(Object) to allow setting of a root object for unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1943
       (Werner - 20070412)

XML:   Resolved issue CASTOR-1939 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed regression issue with automatic conflict resolution and global element conflicts.
       Details: http://jira.codehaus.org/browse/CASTOR-1939
       (Werner - 20070409)

XML:   Resolved issue CASTOR-1935 using contribution from Chris Keller [chris.keller@active-endpoints.com]
       Fixed problem with importing from same namespace multiple times where one import actually includes 
       the other.
       Details: http://jira.codehaus.org/browse/CASTOR-1935
       (Werner - 20070406)

XML:   Resolved issue CASTOR-1938 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed NPE for extended types with <xs:any> members
       Details: http://jira.codehaus.org/browse/CASTOR-1938
       (Werner - 20070406)

XML:   Resolved issue CASTOR-1936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made XPathLocation implement java.io.Serializable.