@@ -1,6 +1,11 @@
 SVN
 ---
 
+XML:   Resolved issue CASTOR-1954 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       XML code generator does not create property* methods for enumerations anymore.
+       Details: http://jira.codehaus.org/browse/CASTOR-1954
+       (Werner - 20070425)
+
 
 Version 1.1.1, Apr 22, 2007
 -------------------------------
